// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CollapsibleComponentCardsTest render expanded with content-class-name 1`] = `
<div
  className="collapsibleContainer"
>
  <CustomizedActionButton
    aria-expanded={true}
    className="collapsibleControl"
    onClick={[Function]}
  >
    <span
      className="collapsibleTitle"
    >
      <div>
        Some header
      </div>
    </span>
  </CustomizedActionButton>
  <div
    className="content-class-name-a collapsibleContent"
  >
    <div>
      Some content
    </div>
  </div>
</div>
`;

exports[`CollapsibleComponentCardsTest render expanded without content-class-name 1`] = `
<div
  className="collapsibleContainer"
>
  <CustomizedActionButton
    aria-expanded={true}
    className="collapsibleControl"
    onClick={[Function]}
  >
    <span
      className="collapsibleTitle"
    >
      <div>
        Some header
      </div>
    </span>
  </CustomizedActionButton>
  <div
    className="collapsibleContent"
  >
    <div>
      Some content
    </div>
  </div>
</div>
`;

exports[`CollapsibleComponentCardsTest render with container-class-name 1`] = `
<div
  className="a-container collapsibleContainer"
>
  <CustomizedActionButton
    aria-expanded={true}
    className="collapsibleControl"
    onClick={[Function]}
  >
    <span
      className="collapsibleTitle"
    >
      <div>
        Some header
      </div>
    </span>
  </CustomizedActionButton>
  <div
    className="collapsibleContent"
  >
    <div>
      Some content
    </div>
  </div>
</div>
`;

exports[`CollapsibleComponentCardsTest render without container-class-name 1`] = `
<div
  className="collapsibleContainer"
>
  <CustomizedActionButton
    aria-expanded={true}
    className="collapsibleControl"
    onClick={[Function]}
  >
    <span
      className="collapsibleTitle"
    >
      <div>
        Some header
      </div>
    </span>
  </CustomizedActionButton>
  <div
    className="collapsibleContent"
  >
    <div>
      Some content
    </div>
  </div>
</div>
`;

exports[`CollapsibleComponentCardsTest toggle from expanded to collapsed: collapsed 1`] = `
<div
  className="collapsibleContainer collapsed"
>
  <CustomizedActionButton
    aria-expanded={false}
    className="collapsibleControl"
    onClick={[Function]}
  >
    <span
      className="collapsibleTitle"
    >
      <div>
        Some header
      </div>
    </span>
  </CustomizedActionButton>
</div>
`;

exports[`CollapsibleComponentCardsTest toggle from expanded to collapsed: expanded 1`] = `
<div
  className="collapsibleContainer"
>
  <CustomizedActionButton
    aria-expanded={true}
    className="collapsibleControl"
    onClick={[Function]}
  >
    <span
      className="collapsibleTitle"
    >
      <div>
        Some header
      </div>
    </span>
  </CustomizedActionButton>
  <div
    className="collapsibleContent"
  >
    <div>
      Some content
    </div>
  </div>
</div>
`;
